Simplify deployment: dist/ in main branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Build & Deploy to Netcup
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'dist/**'   # verhindert Endlosschleife
 
 permissions:
   contents: write
@@ -12,8 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
@@ -27,14 +31,11 @@ jobs:
       - name: Build Astro project
         run: npm run build
 
-      - name: Push dist/ to deploy branch
+      - name: Commit dist/ to main
         run: |
-          cd dist
-          git init
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add -A
-          git commit -m "Deploy: $(date '+%Y-%m-%d %H:%M:%S')"
-          git push --force \
-            https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/wmsoftde/erimec.git \
-            HEAD:deploy
+          git add dist/ -f
+          git diff --staged --quiet && echo "Keine Änderungen" && exit 0
+          git commit -m "build: $(date '+%Y-%m-%d %H:%M:%S') [skip ci]"
+          git push origin main
